Refactored tests
- The tests are functionally the same as before, just neater.